syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.edu.ufcg.middleware.proto.product";

service ProductService {
    rpc Save(ProductSaveRequest) returns (ProductSaveResponse) {}
    rpc List(ProductListRequest) returns (ProductListResponse) {}
    rpc Update(ProductUpdateRequest) returns (ProductUpdateResponse) {}
    rpc Delete(ProductDeleteRequest) returns (ProductDeleteResponse) {}
}

// Save
message ProductSaveRequest {
    string name = 1;
    string description = 2;
    double price = 3;
    int64 stock = 4;
}

message ProductSaveResponse {
    message Data {
        int64 id = 1;
        string name = 2;
        string description = 3;
        double price = 4;
        int64 stock = 5;
    }

    int32 status = 1;
    Data data = 2;
}

// List
message ProductListRequest {
    message Filters {
        optional string name = 1;
        optional double price_min = 2;
        optional double price_max = 3;
    }

    optional Filters filters = 1;
}

message ProductListResponse {
    message Product {
        uint32 id = 1;
        string name = 2;
        string description =3;
        double price = 4;
        int64 stock = 5;
    }

    repeated Product products = 1;
}

// Update
message ProductUpdateRequest{
    int32 id = 1;
    optional string name = 2;
    optional string description =3;
    optional double price = 4;
    optional int64 stock = 5;
}

message ProductUpdateResponse{
    uint32 id = 1;
    string name = 2;
    string description =3;
    double price = 4;
    int64 stock = 5;
}

// Delete
message ProductDeleteRequest {
    int32 id = 1;
}

message ProductDeleteResponse {}